--- a/microbit/src/05-led-roulette/Cargo.toml
+++ b/microbit/src/05-led-roulette/Cargo.toml
@@ -6,11 +6,11 @@ edition = "2018"
 
 [dependencies.microbit-v2]
 version = "0.12.0"
-optional = true
+#optional = true
 
-[dependencies.microbit]
-version = "0.12.0"
-optional = true
+#[dependencies.microbit]
+#version = "0.12.0"
+#optional = true
 
 [dependencies]
 cortex-m = "0.7.3"
@@ -25,6 +25,6 @@ panic-halt = "0.2.0"
 rtt-target = { version = "0.3.1", features = ["cortex-m"] }
 panic-rtt-target = { version = "0.1.2", features = ["cortex-m"] }
 
-[features]
-v2 = ["microbit-v2"]
-v1 = ["microbit"]
+#[features]
+#v2 = ["microbit-v2"]
+#v1 = ["microbit"]
